[package]
name = "typed-session-axum"
version = "0.2.4"
description = "Cookie-based sessions for Axum via typed-session"
edition = "2021"
homepage = "https://github.com/ISibboI/typed-session-axum"
license = "BSD-2-Clause"
keywords = ["axum", "session", "sessions", "cookie", "typed-session"]
categories = ["web-programming"]
repository = "https://github.com/ISibboI/typed-session-axum"
documentation = "https://docs.rs/typed-session-axum"
rust-version = "1.67.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
typed-session = "0.9.0"

[dependencies]
typed-session.workspace = true
http-body = "0.4.5"
tracing = "0.1.39"
async-trait = "0.1.68"
axum = {version = "0.6.20", features = ["headers"]}
axum-extra = { version = "0.8.0", features = ["cookie"] }
tokio = {version = "1.33.0", features = ["sync"]}
tower = "0.4.13"
futures = "0.3.28"
rand = "0.8.5"
time = "0.3.30"
chrono = "0.4.26"


[dev-dependencies]
serde = {version = "1.0.164", features = ["derive"]}
serde_json = "1.0.107"
tokio = {version = "1.33.0", features = ["macros", "rt-multi-thread"]}
hyper = "0.14.26"
http = "0.2.9"
typed-session = {workspace = true, features = ["memory-store"]}
